Fix gap

--- a/form-system/front/src/components/Header/Header.scss
+++ b/form-system/front/src/components/Header/Header.scss
@@ -12,8 +12,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  // gap: var(--spacing-m);
-  gap: 50px;
+  gap: var(--spacing-m);
 }
 
 .main-page-body {
